--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap": "^5.3.2",
     "firebase": "^10.7.1",
+    "firestore": "^1.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
