--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "bootstrap": "^5.3.2",
     "firebase": "^10.7.1",
     "firestore": "^1.1.6",
+    "phonesocket": "^1.0.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
