--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "phonesocket": "^1.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
+    "socket.io-client": "^4.7.3",
+    "socketio": "^1.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
