--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.3.2",
     "firebase": "^10.7.1",
     "firestore": "^1.1.6",
+    "framer-motion": "^11.0.3",
     "phonesocket": "^1.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
